# bevy-2d-fight-game

./: Cargo.toml
assets/: tile-based-game.ldtk
src/: attack.rs  camera.rs  main.rs  movement.rs  player.rs  world.rs
