[package]
name = "bevy-2d-fight-game"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12", features = ["dynamic_linking"] }
bevy_rapier2d = {version="0.23.0", features = ["simd-stable","debug-render-2d", "parallel"]}
